# Faust2Godot

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  readme.md
architectures/: faust2godot  godot.cpp
architectures/godot/: faust2godot  faust2godot.py  faust2godot.sh  godot.cpp
architectures/godot/template/: project.godot
demo/effect-demo/: FaustParameters.gd  FaustParameters.gd.uid  default_bus_layout.tres  demo.tscn  echo.dsp  icon.svg.import  project.godot
demo/effect-demo/assets/: Test.wav.import
demo/generator-demo/: Demo.gd  Demo.gd.uid  Demo.tscn  icon.svg.import  project.godot
demo/polyphonic-demo/: Demo.gd  Demo.tscn  Key.gd  Key.gd.uid  default_bus_layout.tres  key.tscn  libfaustdsp.dylib  poly.dsp  project.godot
documentation/: user-documentation.md
include/: AudioEffectFaust.h  AudioStreamFaust.h  DynLibrary.h  GodotDsp.h  GodotMapUI.h  GodotMidi.h  IPropertyHandler.h  MidiHandlerFaust.h  defines.h  faust2godot.h  gdexample.h
include/inspector/: ButtonEditorProperty.h  EditorPluginFaust.h  InspectorPluginFaust.h  VSliderEditorProperty.h
include/unix/: DynLibrary.inl
include/windows/: DynLibrary.inl
project/: AudioEffectCustom.cs  AudioEffectCustom.cs.uid  Faust2Godot.sln  FaustParameters.gd.uid  MyFaustSuperEffect.tres  Test.gd.uid  Test.wav.import  default_bus_layout.tres  icon.svg.import  main.tscn  project.godot
src/: AudioEffectFaust.cpp  AudioStreamFaust.cpp  FaustGUIGlue.cpp  GodotDsp.cpp  GodotMapUI.cpp  GodotMidi.cpp  MidiHandlerFaust.cpp  faust2godot.cpp  gdexample.cpp
src/inspector/: ButtonEditorProperty.cpp  EditorPluginFaust.cpp  InspectorPluginFaust.cpp  VSliderEditorProperty.cpp
tests/: CMakeLists.txt  dynlib_tests.cpp
tests/test-datas/: libdummy.cpp  libdummy.dylib
tests/test-datas/dsp/: noise.dsp  osc-mono.dsp  osc.dsp
